gateway-k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: {PROJECT_NAME}
  namespace: {PROJECT_NAMESPACE}
  labels:
    app: {PROJECT_NAME}
spec:
  selector:
    app: {PROJECT_NAME}
  ports:
    - name: {PROJECT_NAME}
      port: {PROJECT_PORT}
      targetPort: {PROJECT_PORT}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {PROJECT_NAME}
  namespace: {PROJECT_NAMESPACE}
  labels:
    app: {PROJECT_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: {PROJECT_NAME}
  template:
    metadata:
      labels:
        app: {PROJECT_NAME}
    spec:
      containers:
        - name: {PROJECT_NAME}
          image: {PROJECT_IMAGE}
          ports:
            - containerPort: {PROJECT_PORT}
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: {PROJECT_PORT}
            failureThreshold: 3 # 探测失败的阈值，超过则认定该pod失败状态
            initialDelaySeconds: 60 # pod启动延迟多久进行检查
            periodSeconds: 10 # 检查的周期
            successThreshold: 1 # 探测成功的阈值，只要成功一次就认定pod为正常
            timeoutSeconds: 10 # 超时时间，如果超时则认为pod是失败状态
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: {PROJECT_NAME}
  namespace: {PROJECT_NAMESPACE}
spec:
  rules:
    - host: gateway.snowbd.onesport.com.cn
      http:
        paths:
          - backend:
              serviceName: {PROJECT_NAME}
              servicePort: {PROJECT_PORT}
